#    git diff <cluster commit id> Changelog
# It is also a good idea to take a look on:
#    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
#    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.

* levysotsky: Changed TTableSchemas's operator==. Update masters via snapshot.
* aozeritsky: Update masters via snapshot.
* shakurov: Changed Hydra service protocol. Update masters via snapshot.
* ignat: Protocol between controller agent and scheduler has changed, update it simultaneously.
* ifsmirnov: Tablet cell bundle destruction semantics changed (once again). Update masters with snapshot.
* shakurov: Transactional semantics for @expiration_time. Master servers must be updated via snapshot.
* ifsmirnov: TChunkView introduced. Update masters via snapshot.
* renadeen: Operation snapshot version has changed, operations will be restarted
* max42: ============================ ALL ENTRIES SHOULD BE IN ENGLISH ABOVE THIS LINE ==============================
* shakurov: Multiplied TUser::ReadRequestRateLimit_ by the number of followers. Update masters via snapshot.
* savrus: Изменилась валидация прав при создании таблиц с несколькими таблетами. Обновлять через снепшот.
* ermolovd: Изменилась валидация схем таблиц (коммит 7ebee26d7b7). Обновлять через снепшот.
* ifsmirnov: Tablet cell bundle destruction semantics changed. Update masters with snapshot.
* babenko: Some master config settings were made dynamic and moved to //sys/@config; check master logs for unrecogznied options after upgrade and migrate them to //sys/@config
* babenko: Security tags
* shakurov: Изменилась логика проверки прав в мутации создания кипарисных узлов. Обновлять через снепшот.
* babenko: Добавлены поколоночные ACL, обновлять мастера через снепшот.